<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TimeTracker</string>
    <string name="context">Context</string>
    <string name="working_on">Working on</string>
    <string name="for_label">for</string>
    <string name="edit_task">Edit</string>
    <string name="showTimelineReport">Timeline Report</string>
    <string name="createContext">Create new context</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="createTask">Add Task</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="emptyName">Name can\'t be empty.</string>
    <string name="removeContextDialogText">Do you really want to delete context \"%s\"?</string>
    <string name="removeTaskDialogText">Do you really want to delete task \"%s\"?</string>
    <string name="showComparisonReport">Aggregate Report</string>
    <string name="backSwitch">Create task switch in the past</string>
    <string name="incorrectBackSwitchTime">Time can\'t be earlier than previous task switch or later than current time</string>
    <string name="showSettings">Settings</string>
    <string name="sendDailyReports">Send daily reports by email</string>
    <string name="emails">Emails</string>
    <string name="reportTime">Report time</string>
    <string name="pref_send_report">Send daily report</string>
    <string name="pref_send_report_summ">Send aggregated report by email</string>
    <string name="pref_daily_report">Daily report</string>
    <string name="pref_report_emails">Email addressees</string>
    <string name="pref_daily_report_time">Time to send</string>
    <string name="send_report">Send aggregate report</string>
    <string name="undoStart">Undo start task</string>
    <string name="export_db">Backup DB</string>
    <string name="export_success">DB backed</string>
    <string name="import_success">DB restored</string>
    <string name="import_db">Restore DB backup</string>
    <string name="import_dialog">Select backup to restore:</string>
    <string name="restore_confirmation">Confirm backup to restore:</string>
    <string-array name="intervalChooserLabels">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>
</resources>
