<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/showTimelineReportButton"
        android:title="@string/showTimelineReport"
        android:showAsAction="never" />
    <item
        android:id="@+id/showComparisonReportButton"
        android:title="@string/showComparisonReport"
        android:showAsAction="never" />
    <item
        android:id="@+id/sendReportButton"
        android:title="@string/send_report"
        android:showAsAction="never" />
    <item
        android:id="@+id/showSettings"
        android:title="@string/showSettings"
        android:showAsAction="never" />
    <item
        android:id="@+id/exportDbButton"
        android:title="@string/export_db"
        android:showAsAction="never" />
    <item
        android:id="@+id/importDbButton"
        android:title="@string/import_db"
        android:showAsAction="never" />
</menu>