<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/context"
                android:id="@+id/textView"
                android:layout_gravity="left|center_vertical"
                android:enabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_gravity="right|center_vertical"
                android:spinnerMode="dropdown"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/removeContextButton"
                android:layout_gravity="center"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/createContextButton"
                android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_on"
                android:id="@+id/textView1"
                android:layout_gravity="center|left"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/current_task_text_size"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentTaskName"
                android:enabled="true"
                android:editable="false"
                android:text=" "
                android:inputType="none"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/current_task_text_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_label"
                android:id="@+id/textView2"
                android:layout_gravity="center|left"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/current_task_text_size"/>

        <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chronometer"
                android:autoText="false"
                android:layout_gravity="center|left"
                android:textStyle="bold"
                android:textSize="@dimen/current_task_text_size"/>

    </LinearLayout>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listView"
            android:layout_gravity="center"
            android:layout_weight="0.52"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createTask"
            android:id="@+id/createTaskButton"
            android:layout_gravity="center"/>

</LinearLayout>

